AI-JADEDEVS4/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <formula>Owner:User.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Director_s_Email__c</fullName>
        <description>Populated the record owner&apos;s director&apos;s email address with a workflow for sending notifications</description>
        <label>Owner&apos;s Director&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_id__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_s_Email__c</fullName>
        <description>Populated the record owner&apos;s manager&apos;s email address with a workflow for sending notifications</description>
        <label>Owner&apos;s Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRL_Used_Date__c</fullName>
        <description>The date and time that the Partner used the PRL link.</description>
        <inlineHelpText>The date and time that the Partner used the PRL link.</inlineHelpText>
        <label>PRL Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRL_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRL Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_Points__c</fullName>
        <inlineHelpText>What pain is the customer experiencing that motivates them to explore a solution?</inlineHelpText>
        <label>Reason for change/Pain Points</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related field of Partner</description>
        <inlineHelpText>Partner referred this lead to Adaptive and please contact the Channel Team if we need to add or make changes to partner list</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Partner-Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Adaptive_Expertise_Offered__c</fullName>
        <label>Partner Adaptive Expertise Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Revenue</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Annual_Revenue__c</fullName>
        <label>Partner Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M - 9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10M - 24M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25M - 49M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50M - 99M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100M - 199M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200M - 499M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500M - 1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <label>Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Partner Contact who submitted this Lead.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Currently_Has_Active_Leads__c</fullName>
        <label>Partner Currently Has Active Leads</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Desired_Geographic_Territory__c</fullName>
        <label>Partner Desired Geographic Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Last_Activity_Date__c</fullName>
        <label>Partner Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Other_Solution_Specializations__c</fullName>
        <label>Partner Other Solution Specializations</label>
        <picklist>
            <picklistValues>
                <fullName>Birst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSFT GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pervasive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>proDacapo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QlikView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickBooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SugarCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tableau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <formula>$User.ContactId = Partner_Contact__c &amp;&amp; NOT(ISBLANK(Partner_Contact__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Primary_Interest__c</fullName>
        <label>Partner Program Primary Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Refer_Link__c</fullName>
        <label>Partner Refer Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Referal_Follow_Up__c</fullName>
        <description>Designates who will follow up with this partner referral</description>
        <inlineHelpText>Indicates who will follow up with this partner referral</inlineHelpText>
        <label>Follow up</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Referral_Follow_Up__c</fullName>
        <description>Designates who will follow up with this partner referral</description>
        <inlineHelpText>Indicates who will follow up on this lead.</inlineHelpText>
        <label>Referral Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Services_Planned_to_Offer__c</fullName>
        <label>Partner Services Planned to Offer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Target_Market_Segment__c</fullName>
        <label>Partner Target Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$50m Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50M - $250M Mid-Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$250M Enterprise</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Tell_Us_Why_Interested__c</fullName>
        <label>Partner Tell Us Why Interested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Visible only by Channels and International &amp; Partner profiles</description>
        <inlineHelpText>Visible only by Channels and International &amp; Partner profiles</inlineHelpText>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>BPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>yahoo, MSN, AOL, Gmail, Hotmail, etc</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personnel_Planning_Needs__c</fullName>
        <label>Personnel Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Notes__c</fullName>
        <label>Phone Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pursuing__c</fullName>
        <inlineHelpText>Notes if the partner is taking ownership of pursuing the lead</inlineHelpText>
        <label>Pursuing</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RWLeadConvertApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RWLeadConvertApprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Not_a_Fit__c</fullName>
        <label>Reason Not a Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unserved Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Recycled__c</fullName>
        <description>Returns the lead to marketing to fix or wait until prospect re-engages. Must define why you Recycled.</description>
        <inlineHelpText>Returns the lead to marketing to fix or wait until prospect re-engages. Must define why you Recycled.</inlineHelpText>
        <label>Reason for Recycled</label>
        <picklist>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Phone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Title/Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer With Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to Lead Nurture Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Company__c</fullName>
        <label>Referral Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <label>Referral Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_First_Name__c</fullName>
        <label>Referral First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Last_Name__c</fullName>
        <label>Referral Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <inlineHelpText>Torchbearers Referral Notes (map to Additional Notes in Eloqua)</inlineHelpText>
        <label>Referral Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>Registration date of the lead from partner community.</description>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Junk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer With Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelaywareID__c</fullName>
        <label>RelaywareID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Dashboard_Needs__c</fullName>
        <label>Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Band__c</fullName>
        <formula>IF(AnnualRevenue &gt; 100000000, &apos;Above $100M&apos;,&apos;Below $100M&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Planning_Needs__c</fullName>
        <label>Revenue Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SDR_Last_Update__c</fullName>
        <label>SDR Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SKO_2016_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for SPIFF during the 2016 Sales KO meeting.  This check box will be deactivated end of business Oct 8, 2015.</description>
        <inlineHelpText>Check this box for SPIFF credit</inlineHelpText>
        <label>SKO-2016</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>New look up field for partners.</inlineHelpText>
        <label>Sales Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Status__c</field>
                <operation>equals</operation>
                <value>Partner &amp; Customer, Partner, Partner Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Not_a_Fit_Other__c</fullName>
        <inlineHelpText>The lead was disqualified due to the solution not being a fit and you have selected &quot;other&quot; as the option, please elaborate.</inlineHelpText>
        <label>Solution Not a Fit Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Age__c</fullName>
        <formula>IF(Lead_Status_Change_Date__c &lt;&gt; null , DATEVALUE(NOW()) - Lead_Status_Change_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Design_Implementation__c</fullName>
        <label>System Design / Implementation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - 24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time Frame</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_Customer__c</fullName>
        <label>Timestamp Lifecycle Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_MAL__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Timestamp Lifecycle MAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_MQL__c</fullName>
        <label>Timestamp Lifecycle MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SAL__c</fullName>
        <label>Timestamp Lifecycle SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp_Lifecycle_SQL__c</fullName>
        <label>Timestamp Lifecycle SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title_STD__c</fullName>
        <inlineHelpText>This is the standardized pick list as of 2008, this list should be the same across all our forms to be effective.  For now, this field will be populated only if someone came back and participate in offers on our website (like the test drive) --alex</inlineHelpText>
        <label>Title-STD</label>
        <picklist>
            <picklistValues>
                <fullName>CEO, President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager FP&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst, Business, Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAO, VP Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant, Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO, CTO, VP IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO, VP Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director, Manager Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP/Dir Sales, Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner, Principal, Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Touches__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Created_Date__c</fullName>
        <label>Trial Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Key__c</fullName>
        <label>Trial Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Request_Date__c</fullName>
        <description>time stamp automatically populated when Enterprise Trial checkbox (Enterprise_Trial__c) is marked true</description>
        <label>Trial Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trial_Type__c</fullName>
        <label>Trial Type</label>
        <picklist>
            <picklistValues>
                <fullName>Populated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trial_Username__c</fullName>
        <label>Trial Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Not a Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer With Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the right size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No CPM background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud CPM Competitor practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No GTM alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not complementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Executive Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Contact_from_Lead_Convert__c</fullName>
        <defaultValue>&quot;YES&quot;</defaultValue>
        <description>On conversion, trigger workflow rules on contact</description>
        <label>Update Contact from Lead Convert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Completed_Date__c</fullName>
        <label>1st Meeting Attended Date</label>
        <type>Date</type>
    </fields>
</CustomObject>